meegotouchhome (0.25.5~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 09 May 2011 19:19:11 +0300

meegotouchhome (0.25.4-1) unstable; urgency=low

  * Fixes: NB#251366 - Paged views resist horizontal panning

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 09 May 2011 19:18:26 +0300

meegotouchhome (0.25.3-1) unstable; urgency=low

  * Fixes: NB#251126 - [TASK] Remove timeout of new taps not activating app launch while previous tap is not completed yet

 -- Janne Sakko <ext-janne.2.sakko@nokia.com>  Fri, 06 May 2011 15:26:00 +0300

meegotouchhome (0.25.2-1) unstable; urgency=low

  * Fixes: NB#253065 - Quick launch bar fixes

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 05 May 2011 16:56:12 +0300

meegotouchhome (0.25.1-1) unstable; urgency=low

  * Failboat release

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Thu, 05 May 2011 16:22:07 +0300

meegotouchhome (0.25.0-1) unstable; urgency=low

  * Fixes: NB#247718 - _MEEGOTOUCH_VISIBLE_IN_SWITCHER incorrectly set
  * Fixes: NB#237618 - Launcher does not notice all package state transitions
  * Fixes: NB#246034 - Application icon is not visible after package installation if the .desktop file is installed before the icon
 
 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Fri, 22 Apr 2011 15:48:05 +0300

meegotouchhome (0.24.5-1) unstable; urgency=low

  * Fixes: NB#247807 - Legal bug in meegotouchhome

 -- Pankaj Saharan <pankaj.saharan@nokia.com>  Mon, 18 Apr 2011 14:17:57 +0300

meegotouchhome (0.24.4-1) unstable; urgency=low

  * Fixes: NB#247923 - Qt icon theme name does not follow libmeegotouch theme name

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 18 Apr 2011 10:39:30 +0300

meegotouchhome (0.24.3-1) unstable; urgency=low

  * Fixes: NB#247974 - Moving launcher button in launcher edit mode should be stored to data store

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Mon, 18 Apr 2011 10:02:26 +0300
